change: organizando docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     image: api_db1:dev
     container_name: api_db1
     build:
-      dockerfile: Dockerfile-endpoint_1
+      dockerfile: endpoint_1/Dockerfile
     command: uvicorn endpoint_1.main:app --reload --workers 1 --host 0.0.0.0 --port 8001
     volumes:
       - .:/usr/src/app
     ports:
       - 8001:8001
-    # env_file:
-    #   - .env
+    env_file:
+      - endpoint_1/.env
     depends_on:
       - db1
 
@@ -19,27 +19,18 @@ services:
     image: api_db2:dev
     container_name: api_db2
     build:
-      dockerfile: Dockerfile-endpoint_2
+      dockerfile: endpoint_2/Dockerfile
     command: uvicorn endpoint_2.main:app --reload --workers 1 --host 0.0.0.0 --port 8001
     volumes:
       - .:/usr/src/app
     ports:
       - 8002:8001
+    env_file:
+      - endpoint_2/.env
     # env_file:
     #   - .env
     depends_on:
       - db2
-
-  # queue_orders:
-  #   image: queue:dev
-  #   build:
-  #     dockerfile: Dockerfile-consumer
-  #   container_name: queue-orders
-  #   command: 'python -u consumer.py'
-  #   env_file:
-  #     - .env
-  #   depends_on:
-  #     - api_orders
 
   # redis_orders:
   #   image: redis:6.2.5-alpine
@@ -81,9 +72,18 @@ services:
       - "5672:5672"
       - "15672:15672"
 
+  queue_consumer:
+    network_mode: host
+    image: queue:dev
+    build:
+      dockerfile: consumer/Dockerfile
+    container_name: queue_consumer
+    command: 'python -u main.py'
+    depends_on:
+      - rabbitmq
+
 volumes:
   postgres-db1:
     name: db1
   postgres-db2:
     name: db2
-  
