refactor: queue_consumer

--- a/queue_consumer/Dockerfile
+++ b/queue_consumer/Dockerfile
@@ -1,4 +1,4 @@
-FROM tiangolo/uvicorn-gunicorn-fastapi:python3.8
+FROM tiangolo/uvicorn-gunicorn-fastapi:python3.11
 
 # Creating workspace
 ENV WORKSPACE=/usr/src/app
@@ -11,4 +11,4 @@ COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy project
-COPY consumer/ $WORKSPACE
+COPY queue_consumer/ $WORKSPACE
