add: mongodb messages ttl

--- a/queue_consumer/.env.example
+++ b/queue_consumer/.env.example
@@ -15,5 +15,6 @@ RABBITMQ_RETRY_LIMIT=5
 RABBITMQ_DELAY=10000
 
 MONGO_DATABASE_URL=mongodb://#################:#################@#################
+MONGO_EXPIRATION_SECONDS=600
 
 POSTGRESQL_DATABASE_URL=postgresql://#################:#################@#################/#################
