--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,8 @@ services:
   redis_data_store:
     image: redis:6.2.5-alpine
     container_name: redis_data_store
-    # network_mode: host
+    volumes:
+      - redis-data:/data
     ports:
       - 6379:6379
 
@@ -124,4 +125,6 @@ volumes:
     name: db_postgres_endput
   mongodb-data:
     name: mongodb-data
+  redis-data:
+    name: redis-data
 
