--- a/postgres_db_2/.env.example
+++ b/postgres_db_2/.env.example
@@ -1,5 +1,5 @@
 
 
-POSTGRES_USER=postgresuser
-POSTGRES_PASSWORD=postgrespwd
-POSTGRES_DB=database
+POSTGRES_USER==#################
+POSTGRES_PASSWORD==#################
+POSTGRES_DB==#################
